tests/negative/gold/none_test.gold
tests/negative/none_test.toit:4:3: warning: Return type of function is 'none'. Can't return a value
  return 499
  ^~~~~~
tests/negative/none_test.toit:14:3: error: Unresolved identifier: 'unresolved'
  unresolved
  ^~~~~~~~~~
tests/negative/none_test.toit:7:7: error: Can't invoke method on 'none' type
  foo.call_on_none
      ^~~~~~~~~~~~
tests/negative/none_test.toit:10:7: error: Can't invoke method on 'none' type
  bar.call_on_none
      ^~~~~~~~~~~~
Compilation failed.
